#--------------------------------------------------------------------------
# File and Version Information:
#  $Id:$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-50
2020-08-06 Mikhail S. Dubrovin
- add app/geometry_image
	new file:   app/geometry_image
	modified:   src/DCUtils.py

Tag: V01-00-49
2020-07-24 Mikhail S. Dubrovin
- add missing return
	modified:   src/GeometryObject.py
	modified:   src/SegGeometryStore.py

Tag: V01-00-48
2020-07-21 Mikhail S. Dubrovin
- add UtilsConvert.py to convert psana geometry to crystfel
  and adjust SegGeometry*
- py2->py3 compatability
- minor style update for mult. modules:
	modified:   GeometryAccess.py
	modified:   GeometryObject.py
	modified:   SegGeometry.py
	modified:   SegGeometryCspad2x1V1.py
	modified:   SegGeometryEpix100V1.py
	modified:   SegGeometryEpix10kaV1.py
	modified:   SegGeometryJungfrauV1.py
	modified:   SegGeometryStore.py
	new file:   UtilsConvert.py

Tag: V01-00-47
2019-05-06 Mikhail S. Dubrovin
- add SegGeometryEpix10kaV1, add CalibPars support for Epix10ka2m
	modified:   include/CalibParsStore.h
	new file:   include/SegGeometryEpix10kaV1.h
	modified:   include/SegGeometryStore.h
	modified:   src/GenericCalibPars.cpp
	new file:   src/SegGeometryEpix10kaV1.cpp

Tag: V01-00-46
2019-03-14 chrisvam
- use integer numpy indexing for more recent numpy versions

Tag: V01-00-45
2018-12-11 Mikhail S. Dubrovin
- add **kwargs to all SegGeometry*.pixel_mask_array, in GlobalUtils add merge_status, fix mask_neighbors
	modified:   src/GlobalUtils.py
	modified:   src/SegGeometry.py
	modified:   src/SegGeometryCspad2x1V1.py
	modified:   src/SegGeometryEpix100V1.py
	modified:   src/SegGeometryEpix10kaV1.py
	modified:   src/SegGeometryJungfrauV1.py
	modified:   src/SegGeometryMatrixV1.py

Tag: V01-00-44